2024-03-05  Steven Eker  <eker@pup>

	* CUI_Term.cc (CUI_Term::arguments): made const

	* CUI_Term.hh (class CUI_Term): made arguments() const

===================================Maude158===========================================

2024-01-16  Steven Eker  <eker@pup>

	* CUI_Symbol.cc (CUI_Symbol::stackArguments): handle
	respectUnstackable argument

	* CUI_Symbol.hh (class CUI_Symbol): updated decl for stackArguments()

===================================Maude156===========================================

2023-07-24  Steven Eker  <eker@pup>

	* CUI_Symbol.cc (CUI_Symbol::determineGround): added

	* CUI_Symbol.hh (class CUI_Symbol): added decl for determineGround()

===================================Maude151===========================================

2020-12-11  Steven Eker  <eker2@eker10>

	* CUI_DagNode.cc (CUI_DagNode::instantiate2): take and pass
	maintainInvariants flag; only normalize and compute sort for
	ground dag if maintainInvariants == true
	(CUI_DagNode::instantiateWithReplacement): pass maintainInvariants
	= false to instantiate()
	(CUI_DagNode::instantiateWithCopies2): pass maintainInvariants =
	false to instantiate()

	* CUI_DagNode.hh (class CUI_DagNode): updated decl for
	instantiate2()

===================================Maude132===========================================

2020-09-28  Steven Eker  <eker2@eker10>

	* CUI_UnificationSubproblem.cc
	(CUI_UnificationSubproblem::markReachableNodes): use range-based
	for loop

	* CUI_UnificationSubproblem2.cc
	(CUI_UnificationSubproblem2::markReachableNodes): use range-based
	for loop

2020-09-25  Steven Eker  <eker2@eker10>

	* CUI_UnificationSubproblem2.cc
	(CUI_UnificationSubproblem2::addUnification): optimize f(...) =?
	f(...) case where there are equal arguments

	* CUI_UnificationSubproblem2.hh (class
	CUI_UnificationSubproblem2): added decl for equivalent()

	* CUI_UnificationSubproblem2.cc
	(CUI_UnificationSubproblem2::addUnification): use