@@ -1,3 +1,9 @@
+2025-01-11  Saruman the White  <eker@eker10>
+
+	* core.hh: added class EqRewriter
+
+	* eqRewriter.hh (class EqRewriter): created
+
 2024-06-07  Steven M. Eker  <eker@eker10>
 
 	* preEquation.hh (enum Flags): added EXTENSION
